--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "vite": "^5.0.0"
     },
     "dependencies": {
+        "@fortawesome/fontawesome-free": "^6.5.2",
         "boostrap": "^2.0.0",
         "bootstrap": "^5.3.3"
     }
