--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dependencies": {
         "@fortawesome/fontawesome-free": "^6.5.2",
         "boostrap": "^2.0.0",
-        "bootstrap": "^5.3.3"
+        "bootstrap": "^5.3.3",
+        "flag-icon-css": "^4.1.7"
     }
 }
