--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "type": "module",
     "scripts": {
         "dev": "vite",
-        "build": "vite build"
+        "build": "vite build",
+        "watch": "vite build --watch"
     },
     "devDependencies": {
         "axios": "^1.6.4",
@@ -14,6 +15,8 @@
         "@fortawesome/fontawesome-free": "^6.5.2",
         "boostrap": "^2.0.0",
         "bootstrap": "^5.3.3",
-        "flag-icon-css": "^4.1.7"
+        "flag-icon-css": "^4.1.7",
+        "flag-icons": "^7.2.1",
+        "npm-watch": "^0.11.0"
     }
 }
