--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
         "laravel/scout": "^10.8",
         "laravel/tinker": "^2.8",
         "livewire/livewire": "^3.4",
-        "spatie/image": "*",
+        "spatie/image": "2.2.7",
         "teamtnt/laravel-scout-tntsearch-driver": "^14.0"
     },
     "require-dev": {
